fix(z-index): unify z-index across taiga (#2019)
* fix(z-index): unify z-index across taiga

* fix(z-index): unify z-index across taiga

--- a/app/modules/components/terms-announcement/terms-announcement.scss
+++ b/app/modules/components/terms-announcement/terms-announcement.scss
@@ -11,7 +11,7 @@
     transition: width $animation-steps-duration, height $animation-steps-duration;
     transition-delay: $animation-steps-duration;
     width: 0;
-    z-index: 99;
+    z-index: $first-layer;
     .terms-announcement-inner {
         opacity: 0;
         transition: opacity $animation-steps-duration;
